--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "piggly/php-decimal",
+    "name": "hypetechpl/php-decimal",
     "description": "An arbitrary-precision Decimal class type for PHP.",
     "keywords": [
         "piggly",
@@ -18,15 +18,15 @@
         "bignum"
     ],
     "type": "library",
-    "homepage": "https://github.com/piggly-dev/php-decimal",
+    "homepage": "https://github.com/hypetechpl/php-decimal",
     "autoload": {
         "psr-4": {
             "Piggly\\Decimal\\": "src/"
         } 
     },
     "require": {
-        "php": "^7.3 || 8.0",
-        "ext-bcmath": "^7.3"
+        "php": "^7.3 || 8.0 || ^8.3",
+        "ext-bcmath": "^7.3 || ^8.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
@@ -38,6 +38,12 @@
             "email": "caique@piggly.com.br",
             "homepage": "https://github.com/caiquearaujo",
             "role": "Developer"
+        },
+        {
+            "name": "Pawel Hawro",
+            "email": "ph@hypetech.pl",
+            "homepage": "https://github.com/hypetechpl",
+            "role": "Developer - Update to remove deprecated warnings for php 8.3"
         }
     ],
     "minimum-stability": "stable"
